[project]
name = "comfyui-decadetw-spout-syphon-im-vj"
description = "I'm SD-VJ. (SD-Image share/receive to/from 3rd software using OpenGL GPU-memory-share)"
version = "1.20240830.0"
license = {file = "LICENSE"}
dependencies = ["numpy", "PyOpenGL", "PyOpenGL_accelerate"]

[project.urls]
Repository = "https://github.com/xlinx/ComfyUI-decadetw-spout-syphon-im-vj"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-decadetw-spout-syphon-im-vj"
Icon = "https://www.decade.tw/wp-content/uploads/2021/09/cropped-DECADE512-150x150.png"
